<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/trash1"
            android:layout_width="wrap_content"
            android:alpha="0.6"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trashItem1"/>
        <Button
            android:id="@+id/trash2"
            android:layout_width="wrap_content"
            android:alpha="0.6"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trashItem2"/>
        <Button
            android:id="@+id/trash3"
            android:layout_width="wrap_content"
            android:alpha="0.6"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trashItem3"/>

    </LinearLayout>

</RelativeLayout>