<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:title="@string/leftMenuItem1" />
        <!--android:icon="@drawable/ic_menu_camera"-->

        <item
            android:id="@+id/nav_places"
            android:title="@string/leftMenuItem2" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/leftMenuItem3" />
        <!--android:icon="@drawable/ic_menu_gallery"-->

        <!--<item-->
        <!--android:id="@+id/nav_slideshow"-->
        <!--android:title="Slideshow" />-->
        <!--&lt;!&ndash;android:icon="@drawable/ic_menu_slideshow"&ndash;&gt;-->
        <!--<item-->
        <!--android:id="@+id/nav_manage"-->
        <!--android:title="Tools" />-->
        <!--android:icon="@drawable/ic_menu_manage"-->
    </group>

    <!--<item android:title="Communicate">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:title="Share" />-->
    <!--&lt;!&ndash;android:icon="@drawable/ic_menu_share"&ndash;&gt;-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:title="Send" />-->
    <!--&lt;!&ndash;android:icon="@drawable/ic_menu_send"&ndash;&gt;-->
    <!--</menu>-->
    <!--</item>-->

</menu>
